--- a/src/main/resources/templates/monitor.html
+++ b/src/main/resources/templates/monitor.html
@@ -59,6 +59,7 @@
 							<!-- <li><a class="ajax-link" href="#" onclick="showSca()"><span>散点</span></a></li> -->
 							<li id="pieChart"><a class="ajax-link" href="#" onclick="showPie()"><span>饼图</span></a></li>
 							<li id="guageChart"><a class="ajax-link" href="#" onclick="showGauge()"><span>仪表盘</span></a></li>
+							<li id="scatterChart"><a class="ajax-link" href="#" onclick="showScatterChart()"><span>仪表盘</span></a></li>
 							<!-- <li><a class="ajax-link" href="#"><i
 									class="glyphicon glyphicon-eye-open"></i><span>饼图</span></a></li>
 							<li><a class="ajax-link" href="#"><i
