--- a/src/main/resources/static/css/zTree/zTreeDomDrag.css
+++ b/src/main/resources/static/css/zTree/zTreeDomDrag.css
@@ -19,7 +19,21 @@
 	height: 27px;
 	overflow: auto;
 }
+
+.domBtnDivX {
+	display:inline;
+	padding:2px;
+	float:left;
+	border:1px gray dotted;
+	background-color:powderblue;
+	width: 37%;
+	height: 27px;
+	overflow: auto;
+}
+
 .categoryDiv {
+	width: 100%;
+	height: 100%;
 }
 .domBtn {
 	display:inline;
@@ -50,4 +64,6 @@
 	display:inline;
 	float:left;
 	margin-left: 15px;
+	margin-top: 3px;
 }
+
