add user information

--- a/src/main/resources/templates/panel.html
+++ b/src/main/resources/templates/panel.html
@@ -41,7 +41,7 @@
 		<div class="navbar-inner">
 			<!-- <img src="img/BUAAlogo.jpg" style="height:45px; float:left"> -->
 			<a class="navbar-brand navbar-brand-color" href="#"><i
-				class="fa fa-comments" ></i> <strong id="title">我的第一个仪表盘</strong> </a>
+				class="fa fa-comments" ></i> <strong id="title">仪表盘</strong> </a>
 		</div>
 	</div>
 
