--- a/src/main/resources/templates/2DAnalysis.html
+++ b/src/main/resources/templates/2DAnalysis.html
@@ -10,7 +10,7 @@
 <meta name="author" content=""/>
 
 
-<title>二维表数据分析</title>
+<title>对比分析</title>
 
 <!--Echarts  -->
 <!-- <link href="css/ECharts/echartsHome.css" rel="stylesheet"/> -->
@@ -41,7 +41,7 @@
 		<div class="navbar-inner">
 			<!-- <img src="img/BUAAlogo.jpg" style="height:45px; float:left"> -->
 			<a class="navbar-brand navbar-brand-color" href="#"><i
-				class="fa fa-comments"></i> <strong>二维表数据分析 </strong> </a>
+				class="fa fa-comments"></i> <strong>对比分析 </strong> </a>
 		</div>
 	</div>
 
