--- a/src/main/resources/static/css/dragWindow.css
+++ b/src/main/resources/static/css/dragWindow.css
@@ -13,8 +13,8 @@
 	-webkit-box-shadow: 10px 10px 25px #ccc;
 	-moz-box-shadow: 10px 10px 25px #ccc;
 	box-shadow: 10px 10px 25px #ccc;
-	filter: alpha(opacity = 75);/* IE */
-	opacity: 0.75; /* Mozilla */
+	/* filter: alpha(opacity = 75);IE
+	opacity: 0.75; Mozilla */
 	background: rgba(181,174,174, 0.25);
 	/* background-image: url(data:image/gif;base64,AAAA); */
 }
