--- a/src/main/resources/templates/2DAnalysis.html
+++ b/src/main/resources/templates/2DAnalysis.html
@@ -84,7 +84,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="time_select">
+						<div class="select">
 							<!-- <p id="timeRange">
 								范围：<input type="text" class="range" id="range" />
 							</p>
