--- a/src/main/resources/templates/analysis.html
+++ b/src/main/resources/templates/analysis.html
@@ -9,7 +9,7 @@
 <meta name="description" content=""/>
 <meta name="author" content=""/>
 
-<title>数据分析系统</title>
+<title>统计分析</title>
 
 <!-- Bootstrap Core CSS -->
 <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
