--- a/src/main/resources/templates/compareAnalysis.html
+++ b/src/main/resources/templates/compareAnalysis.html
@@ -9,7 +9,7 @@
 <meta name="description" content=""/>
 <meta name="author" content=""/>
 
-<title>数据分析系统</title>
+<title>差异性分析</title>
 
 <!-- Bootstrap Core CSS -->
 <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
@@ -45,13 +45,13 @@
 		<div class="navbar-inner">
 			<!-- <img src="img/BUAAlogo.jpg" style="height:45px; float:left"> -->
 			<a class="navbar-brand navbar-brand-color" href="#"><i
-				class="fa fa-comments"></i> <strong>数据分析 </strong> </a>
+				class="fa fa-comments"></i> <strong>差异性分析 </strong> </a>
 		</div>
 	</div>
 
 	<div id="page_wrapper" class="ch-container">
 		<div class="row">
-			<!-- <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ch-container"> -->
+			<div class="col-xs-12 col-sm-12 ch-container">
 				<div class="analysis_panel-nav" id="analysis_panel">
 					<div class="navbar navabar-color" role="navigation">
 						<div class="navbar-inner-small">
@@ -96,7 +96,7 @@
 						</table>
 					</div>
 				</div>
-			<!-- </div> -->
+			</div>
 		</div>
 
 	</div>
